# dextrus_ws

./: README.md  file.yaml  get_alphas.py
Finger_Controller_MATLAB/: resposta_encoder.m  vai.m  vailqr.m
install/: .rosinstall  setup.sh
install/include/cyberglove/: Calibration.h  CalibrationRequest.h  CalibrationResponse.h  Start.h  StartRequest.h  StartResponse.h
install/include/phidgets/: accelerometer_params.h  encoder_params.h  interface_kitRequest.h  interface_kitResponse.h  interface_kit_params.h  ir_params.h  joystick_params.h  led_params.h  lidar_controlRequest.h  lidar_controlResponse.h  manager_params.h  motor_params.h  pantilt_params.h  phsensor_params.h  pid.h  pidRequest.h  pidResponse.h  pid_params.h  rfid_params.h  servo_params.h  servo_reference.h  servo_referenceRequest.h  servo_referenceResponse.h  spatial_params.h  stepper_params.h  textlcd_params.h
install/include/remap/: ResetCalibration.h  ResetCalibrationRequest.h  ResetCalibrationResponse.h
install/share/cereal_port/cmake/: cereal_portConfig.cmake
install/share/common-lisp/ros/cyberglove/srv/: Calibration.lisp  Start.lisp  _package.lisp  _package_Calibration.lisp  _package_Start.lisp  cyberglove-srv.asd
install/share/common-lisp/ros/phidgets/msg/: _package.lisp  phidgets-msg.asd
install/share/common-lisp/ros/phidgets/srv/: _package.lisp  phidgets-srv.asd
install/share/common-lisp/ros/remap/srv/: ResetCalibration.lisp  _package.lisp  _package_ResetCalibration.lisp  remap-srv.asd
install/share/controle/cmake/: controleConfig.cmake
install/share/cyberglove/cmake/: cyberglove-msg-extras.cmake  cyberglove-msg-paths.cmake  cybergloveConfig.cmake
install/share/cyberglove_trajectory/cmake/: cyberglove_trajectoryConfig.cmake
install/share/phidgets/: package.xml
install/share/phidgets/cmake/: phidgets-msg-extras.cmake  phidgets-msg-paths.cmake  phidgetsConfig.cmake
install/share/remap/: package.xml
install/share/remap/cmake/: remap-msg-extras.cmake  remap-msg-paths.cmake  remapConfig.cmake
install/share/sr_cyberglove_config/calibrations/: calibrationTeste.cal
install/share/sr_cyberglove_config/cmake/: sr_cyberglove_configConfig.cmake
install/share/sr_gui_cyberglove_calibrator/cmake/: sr_gui_cyberglove_calibratorConfig.cmake
install/share/sr_gui_grasp_controller/cmake/: sr_gui_grasp_controllerConfig.cmake
install/share/sr_gui_hand_calibration/cmake/: sr_gui_hand_calibrationConfig.cmake
install/share/sr_gui_joint_slider/cmake/: sr_gui_joint_sliderConfig.cmake
install/share/sr_gui_motor_resetter/cmake/: sr_gui_motor_resetterConfig.cmake
install/share/sr_gui_movement_recorder/cmake/: sr_gui_movement_recorderConfig.cmake
install/share/sr_gui_muscle_driver_bootloader/cmake/: sr_gui_muscle_driver_bootloaderConfig.cmake
install/share/sr_gui_self_test/cmake/: sr_gui_self_testConfig.cmake
install/share/sr_gui_teach_mode/cmake/: sr_gui_teach_modeConfig.cmake
install/share/sr_remappers/cmake/: sr_remappersConfig.cmake
install/share/sr_visualization_icons/cmake/: sr_visualization_iconsConfig.cmake
phidgetsRB/: CMakeLists.txt  manifest.xml
phidgetsRB/.bzr/repository/: pack-names
phidgetsRB/phidgets/: CMakeLists.txt
phidgetsRB/src/phidgets/msg/: __init__.py  _accelerometer_params.py  _encoder_params.py  _interface_kit_params.py  _ir_params.py  _joystick_params.py  _led_params.py  _manager_params.py  _motor_params.py  _pantilt_params.py  _phsensor_params.py  _pid_params.py  _rfid_params.py  _servo_params.py  _spatial_params.py  _stepper_params.py  _textlcd_params.py
phidgetsRB/src/phidgets/srv/: _interface_kit.py  _lidar_control.py  _pid.py  _servo_reference.py
report/: Olavo-Dextrus Hand Controller.docx
sketchbook/libraries/ros_lib/cob_srvs/: GetPoseStampedTransformed.h  SetDefaultVel.h  SetFloat.h  SetInt.h  SetJointStiffness.h  SetJointTrajectory.h  SetMaxVel.h  SetOperationMode.h  SetString.h  Trigger.h
sketchbook/libraries/ros_lib/iai_urdf_msgs/: AlterUrdf.h
sketchbook/sketch_oct08a/: sketch_oct08a.ino
sketchbook/sketch_oct13a/: sketch_oct13a.ino
src/controle/: CMakeLists.txt  package.xml
src/controle/launch/: controle.launch
src/controle/src/: controle_motor.cpp  controle_motor_PID.cpp
src/cyberglove/: CMakeLists.txt
src/cyberglove/launch/: cyberglove.launch
src/cyberglove/src/: cyberglove_node.cpp  cyberglove_publisher.cpp  myserial.py  serial_glove.cpp  xml_calibration_parser.cpp
src/cyberglove_trajectory/launch/: cyberglove.launch
src/phidgets/: CMakeLists.txt  package.xml
src/phidgets/src/: high_speed_encoder.cpp  manager.cpp
src/remap/: CMakeLists.txt  package.xml
src/remap/src/: comando.cpp  leitor.cpp  remaper2.cpp  reset_calibration_client.cpp
